@@ -1,3 +1,12 @@
+2006-01-02  Mark Mitchell  <mark@codesourcery.com>
+
+	* src/Makefile.am (LTLDFLAGS): New variable. 
+	(CXXLINK): Use LTLDFLAGS.
+	* src/Makefile.in: Regenerated.
+	* libsupc++/Makefile.am (LTLDFLAGS): New variable. 
+	(CXXLINK): Use LTLDFLAGS.
+	* libsupc++/Makefile.in: Regenerated.
+
 2006-01-02  Paolo Carlini  <pcarlini@suse.de>
 
 	PR libstdc++/24645
